cleaned up footnotes

--- a/intro.tex
+++ b/intro.tex
@@ -22,7 +22,7 @@ The first research reactor, having a power of 3.5 MW~\footnote{As research react
 Here, first neutron scattering experiments were performed by Clifford Shull using a two-axis diffractometer \cite[pp. 3, 37]{Jacrot2021}.
 
 From there on, science advanced fast, and several centres dedicated to neutron research were founded around the world.
-A selection of research reactors in operation today include the 20 MW \textit{Forschungsreaktor M\"unchen II}~\footnote{\url{https://mlz-garching.de}} (FRM-II) at the Heinz-Maier-Leibnitz-Zentrum in Germany, the 20 MW reactor at the NIST Center for Neutron Research\footnote{\url{https://www.nist.gov/ncnr}} (NCNR), the 85 MW \textit{High Flux Isotope Reactor}\footnote{\url{https://neutrons.ornl.gov/hfir}} (HFIR) at the Oak Ridge National Laboratory, both based in the United States, and the reactor of the Institut Laue-Langevin~\footnote{\url{https://www.ill.eu}} (ILL) in France, which - at 58 MW - is the most powerful neutron source used for science in Europe.
+A selection of research reactors in operation today include the 20 MW \textit{Forschungsreaktor M\"unchen II}~\cite{web_mlz} (FRM-II) at the Heinz-Maier-Leibnitz-Zentrum in Germany, the 20 MW reactor at the NIST Center for Neutron Research~\cite{web_nist} (NCNR), the 85 MW \textit{High Flux Isotope Reactor}~\cite{web_oakridge} (HFIR) at the Oak Ridge National Laboratory, both based in the United States, and the reactor of the Institut Laue-Langevin~\cite{web_ill} (ILL) in France, which - at 58 MW - is the most powerful neutron source used for science in Europe.
 
 Studying the structure and dynamics of crystals is made possible since neutrons emerging from the reactor can be slowed down (moderated) into energy regions where their de Broglie wavelength $\lambda = h/p$ \cite[p. 89]{Gross2012} corresponds to typical inter-atomic distances in crystal unit cells, which is of the order of 1 \AA{}ngstr\"om, i.e. $10^{-10}$ m \cite[pp.1,3]{Squires2012}. In the formula, $p$ denotes the neutron momentum and $h$ Planck's constant. Such a slowing-down of neutrons is usually performed using a secondary moderator outside the reactor's main moderator -- which itself sustains the nuclear fission -- for example using liquid $\mathrm{D_2O}$ \cite[p. 82]{Jacrot2021}. Here, neutrons are brought into a new thermal equilibrium by elastic collisions with the nuclei of the moderator's atoms \cite[p. 30]{Stacey2007}, i.e. the neutrons take the temperature and thus energy of the surrounding material.
 
@@ -30,7 +30,7 @@ Studying the structure and dynamics of crystals is made possible since neutrons 
 
 \section{Instruments for neutron scattering \label{sec:instruments}}
 
-While a modern research reactor houses a multitude of different instrument types, among them time-of-flight, back-scattering and spin-echo spectrometers, furthermore Larmor, Laue and small-angle diffractometers, in this section, we instead want to shortly present the most basic types of instrument, the two-axis diffractometer and the triple-axis spectrometer. Together, the discovery of these two instruments by Clifford Shull and Bertram Brockhouse, respectively, was awarded the 1994 Nobel Prize in Physics~\footnote{\url{https://www.nobelprize.org/prizes/physics/1994/press-release/}}. A comprehensive introduction into these instruments, especially triple-axis spectroscopy, can be found in the book by G. Shirane \cite{Shirane2002}. An advanced treatment of neutron scattering theory is given by G. L. Squires \cite{Squires2012}.
+While a modern research reactor houses a multitude of different instrument types, among them time-of-flight, back-scattering and spin-echo spectrometers, furthermore Larmor, Laue and small-angle diffractometers, in this section, we instead want to shortly present the most basic types of instrument, the two-axis diffractometer and the triple-axis spectrometer. Together, the discovery of these two instruments by Clifford Shull and Bertram Brockhouse, respectively, was awarded the 1994 Nobel Prize in Physics~\cite{web_nobel1994}. A comprehensive introduction into these instruments, especially triple-axis spectroscopy, can be found in the book by G. Shirane \cite{Shirane2002}. An advanced treatment of neutron scattering theory is given by G. L. Squires \cite{Squires2012}.
 
 
 \subsection{Two-axis diffractometers}
@@ -100,9 +100,9 @@ As the name implies, the difference of the TAS set-up compared to the two-axis d
 
 Up until the end of 2019, TAS experiments usually required external scientists to stay at the research reactor for typically one week and conduct the experiment together with the instrument's responsible scientists. Specifically at the Institut Laue-Langevin (ILL), there had already been attempts (e.g. \cite{Song2020}) of the instrument control and scientific computing groups to convince the instrument scientists of the benefits of instrumentation with full- or semi-autonomous as well as remote control. Nevertheless, the impact had been limited.
 
-The situation changed significantly with the Covid-19 pandemic. Receiving visiting scientists has not been possible anymore, or only to a very limited degree. Instead, remote experimentation and instrument control has become the new norm. Users now connect to a web interface from which the experiment can be planned and data can be analysed~\footnote{\url{https://visa.ill.eu}}. Discussions with instrument scientists take place via web-cams that have been installed at every instrument.
+The situation changed significantly with the Covid-19 pandemic. Receiving visiting scientists has not been possible anymore, or only to a very limited degree. Instead, remote experimentation and instrument control has become the new norm. Users now connect to a web interface from which the experiment can be planned and data can be analysed~\cite{web_ill_visa}. Discussions with instrument scientists take place via web-cams that have been installed at every instrument.
 
-At the same time, the idea to automate manual tasks at instruments using algorithms and AI has gained significant traction, with first autonomous experiments being attempted~\footnote{\url{https://www.ill.eu/news-press-events/news/scientific-news/machine-learning-at-ill-first-autonomous-steps-of-the-neutron-spectrometer-thales}}.
+At the same time, the idea to automate manual tasks at instruments using algorithms and AI has gained significant traction, with first autonomous experiments being attempted~\cite{web_ill_autonomous2020}.
 
 As part of the current drive towards autonomous experimentation at the ILL, the goal of the present work is the design and implementation of a software tool which enable an automatic path finding for TAS instruments. Automatic path finding is necessary for the instrument to circumvent obstacles in its path. Currently, this task has to be performed by the instrument scientists before each new scan series in a time-consuming fashion. The current approach requires the instrument to be  driven along the programmed scan path, but without measuring and with the neutron beam from the reactor closed. The scientist has to stay in the instrument space and watch the instrument as it moves to every scan position. A manual stop has to be initiated when the instrument would collide with a wall, with itself, or when the rotation of one of the axes would pull out a cable or tube.
 
