--- a/thesis.bib
+++ b/thesis.bib
@@ -88,6 +88,18 @@
 }
 
 
+@book
+{
+	Berg2008,
+	author = {Mark de Berg and Otfried Cheong and Marc van Kreveld and Mark Overmars},
+	title = {{Computational Geometry, Algorithms and Applications, Third Edition}},
+	year = {2008},
+	publisher = {Springer-Verlag Berlin Heidelberg, Germany},
+	isbn = {978-3-540-77973-5},
+	doi = {10.1007/978-3-540-77974-2},
+}
+
+
 @article
 {
 	Lumsden2005,
@@ -102,7 +114,8 @@
 }
 
 
-@article{
+@article
+{
 	Takin2021,
 	title = {{Update 2.0 to ``Takin: An open-source software for experiment planning, visualisation, and data analysis'', (PII: S2352711016300152)}},
 	journal = {SoftwareX},
@@ -206,7 +219,8 @@
 	note = "[Online; accessed 10-February-2021]"
 }
 
-@misc{
+@misc
+{
 	wiki_oklo,
 	author = {{Wikipedia}},
 	title = {{Naturreaktor Oklo --- Wikipedia{,} Die freie Enzyklop\"adie}},
@@ -214,6 +228,63 @@
 	url = "\url{https://de.wikipedia.org/w/index.php?title=Naturreaktor_Oklo&oldid=203811915}",
 	howpublished = "\url{https://de.wikipedia.org/w/index.php?title=Naturreaktor_Oklo&oldid=203811915}",
 	note = "[Online; Stand 10. Februar 2021]"
+}
+
+@misc
+{
+	web_nobel1994,
+	author = {{The Royal Swedish Academy of Science}},
+	title = {{The Nobel Prize in Physics 1994 -- Press Release}},
+	year = "1994",
+	url = "\url{https://www.nobelprize.org/prizes/physics/1994/press-release/}",
+	note = "[Online; accessed 13-April-2021]"
+}
+
+@misc
+{
+	web_mlz,
+	title = {{Heinz-Maier-Leibnitz-Zentrum (MLZ), Garching, Germany}},
+	url = "\url{https://mlz-garching.de}",
+}
+
+@misc
+{
+	web_nist,
+	title = {{NIST Center for Neutron Research (NCNR), Gaithersburg, Maryland, USA}},
+	url = "\url{https://www.nist.gov/ncnr}",
+}
+
+@misc
+{
+	web_oakridge,
+	title = {{High-Flux Isotope Reactor (HFIR) at the Oak Ridge National Laboratory (ORNL), Oak Ridge, Tennessee, USA}},
+	url = "\url{https://neutrons.ornl.gov/hfir}",
+}
+
+@misc
+{
+	web_ill,
+	title = {{Institut Laue-Langevin (ILL), Grenoble, France}},
+	url = "\url{https://www.ill.eu}",
+}
+
+@misc
+{
+	web_ill_visa,
+	author = {{Institut Laue-Langevin}},
+	title = {{ILL VISA system for remote data analysis}},
+	url = "\url{https://visa.ill.eu}",
+	note = "[Online; accessed 13-April-2021]",
+}
+
+@misc
+{
+	web_ill_autonomous2020,
+	author = {{Institut Laue-Langevin}},
+	year = {2020},
+	title = {{Machine Learning at ILL: First autonomous steps of the neutron spectrometer ThALES}},
+	url = "\url{https://www.ill.eu/news-press-events/news/scientific-news/machine-learning-at-ill-first-autonomous-steps-of-the-neutron-spectrometer-thales}",
+	note = "[Online; accessed 13-April-2021]",
 }
 
 
