--- a/thesis.bib
+++ b/thesis.bib
@@ -237,6 +237,7 @@
 	title = {{The Nobel Prize in Physics 1994 -- Press Release}},
 	year = "1994",
 	url = "\url{https://www.nobelprize.org/prizes/physics/1994/press-release/}",
+	howpublished = "\url{https://www.nobelprize.org/prizes/physics/1994/press-release/}",
 	note = "[Online; accessed 13-April-2021]"
 }
 
@@ -245,6 +246,8 @@
 	web_mlz,
 	title = {{Heinz-Maier-Leibnitz-Zentrum (MLZ), Garching, Germany}},
 	url = "\url{https://mlz-garching.de}",
+	howpublished = "\url{https://mlz-garching.de}",
+	note = "[Online; accessed 13-April-2021]",
 }
 
 @misc
@@ -252,6 +255,8 @@
 	web_nist,
 	title = {{NIST Center for Neutron Research (NCNR), Gaithersburg, Maryland, USA}},
 	url = "\url{https://www.nist.gov/ncnr}",
+	howpublished = "\url{https://www.nist.gov/ncnr}",
+	note = "[Online; accessed 13-April-2021]",
 }
 
 @misc
@@ -259,6 +264,8 @@
 	web_oakridge,
 	title = {{High-Flux Isotope Reactor (HFIR) at the Oak Ridge National Laboratory (ORNL), Oak Ridge, Tennessee, USA}},
 	url = "\url{https://neutrons.ornl.gov/hfir}",
+	howpublished = "\url{https://neutrons.ornl.gov/hfir}",
+	note = "[Online; accessed 13-April-2021]",
 }
 
 @misc
@@ -266,6 +273,8 @@
 	web_ill,
 	title = {{Institut Laue-Langevin (ILL), Grenoble, France}},
 	url = "\url{https://www.ill.eu}",
+	howpublished = "\url{https://www.ill.eu}",
+	note = "[Online; accessed 13-April-2021]",
 }
 
 @misc
@@ -274,6 +283,7 @@
 	author = {{Institut Laue-Langevin}},
 	title = {{ILL VISA system for remote data analysis}},
 	url = "\url{https://visa.ill.eu}",
+	howpublished = "\url{https://visa.ill.eu}",
 	note = "[Online; accessed 13-April-2021]",
 }
 
@@ -284,6 +294,7 @@
 	year = {2020},
 	title = {{Machine Learning at ILL: First autonomous steps of the neutron spectrometer ThALES}},
 	url = "\url{https://www.ill.eu/news-press-events/news/scientific-news/machine-learning-at-ill-first-autonomous-steps-of-the-neutron-spectrometer-thales}",
+	howpublished = "\url{https://www.ill.eu/news-press-events/news/scientific-news/machine-learning-at-ill-first-autonomous-steps-of-the-neutron-spectrometer-thales}",
 	note = "[Online; accessed 13-April-2021]",
 }
 
@@ -297,5 +308,6 @@
 	address = {M\"unchen, Germany},
 	year = 2017,
 	isbn = {978-3-8439-3114-4},
-	url = {http://nbn-resolving.de/urn/resolver.pl?urn:nbn:de:bvb:91-diss-20170320-1339645-0-4},
+	url = "\url{http://nbn-resolving.de/urn/resolver.pl?urn:nbn:de:bvb:91-diss-20170320-1339645-0-4}",
+	howpublished = "\url{http://nbn-resolving.de/urn/resolver.pl?urn:nbn:de:bvb:91-diss-20170320-1339645-0-4}",
 }
