--- a/thesis.tex
+++ b/thesis.tex
@@ -52,15 +52,17 @@
 \chapter{Introduction}
 \input{intro.tex}
 
-\chapter{Theory}
-\input{theory_xtal.tex}
-\input{theory_path.tex}
+\chapter{Crystal and Instrument Coordinate Systems}
+\input{xtal.tex}
 
+\chapter{Path-finding}
+\input{paths.tex}
 
 \chapter{Implementation}
 % library
 % GUI
 % Nomad interface
+% Verweis auf Nomad 3D und vTAS/vEXP
 
 
 \appendix
