--- a/xtal.tex
+++ b/xtal.tex
@@ -129,9 +129,9 @@ The derivation of basic scattering geometries in triple-axis spectrometers can b
 
 \begin{figure}
 \begin{center}
-	\includegraphics[width = 0.75 \textwidth]{figures/tas}
+	\includegraphics[width = 0.75 \textwidth]{figures/tas_triangle}
 \end{center}
-\caption{Triple-axis layout and scattering triangle.}
+\caption{Triple-axis layout (left) and scattering triangle (right).}
 \end{figure}
 
 
