continued with coordinate systems

--- a/thesis.bib
+++ b/thesis.bib
@@ -230,6 +230,15 @@
 	note = "[Online; Stand 10. Februar 2021]"
 }
 
+@misc{wiki_summation,
+	author = {{Wikipedia contributors}},
+	title = {{Einstein notation --- {Wikipedia}{,} The Free Encyclopedia}},
+	year = "2021",
+	url = "\url{https://en.wikipedia.org/w/index.php?title=Einstein_notation&oldid=1015796551}",
+	howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Einstein_notation&oldid=1015796551}",
+	note = "[Online; accessed 14-April-2021]"
+  }
+
 @misc
 {
 	web_nobel1994,
