--- a/xtal.tex
+++ b/xtal.tex
@@ -99,7 +99,7 @@ The crystallographic $A$ matrix, which transforms real-space fractional to lab c
 The $B$ matrix, which transforms reciprocal-space relative lattice units (rlu) to lab coordinates (1/\AA), is:
 \begin{equation} B = 2 \pi A^{-t}, \end{equation}
 where $-t$ denotes the transposed inverse.
-We can determine the metric tensor corresponding to the coordinate system defined by the $B$ transformation matrix, it reads \cite[p. 808]{Arens2015}:
+We can now also determine the metric tensor corresponding to the coordinate system defined by the $B$ transformation matrix, it reads \cite[p. 808]{Arens2015}:
 \begin{equation}
 	\left(g_{ij}\right) = \left<\underline{b}_i | \underline{b}_j \right> = B^T B,
 \end{equation}
@@ -110,13 +110,15 @@ where the reciprocal basis vectors $\left| \underline{b}_i \right>$ form the col
 Having a metric makes it straightforward to calculate lengths and angles.
 The length of a reciprocal lattice vector $\left| G \right>$ seen from the lab system is (in 1/\AA{} units) \cite[p. 808]{Arens2015}:
 \begin{equation}
-	\left\Vert \left< G | G \right> \right\Vert = \sqrt{\left< G | G \right>} = \sqrt{G_i G^j} = \sqrt{g_{ij} G^i G^j}.
+	\left\Vert \left< G | G \right> \right\Vert = \sqrt{\left< G | G \right>} = \sqrt{G_i G^i} = \sqrt{g_{ij} G^i G^j}.
 \end{equation}
 The angle $\theta$ between two Bragg peaks $\left| G \right>$ and $\left| H \right>$ is given by their dot product \cite[p. 808]{Arens2015}:
 \begin{equation}
 	\frac{\left< G | H \right>}{\left\Vert \left< G | G \right> \right\Vert \cdot \left\Vert \left< H | H \right> \right\Vert} = 
 	\frac{g_{ij} G^i H^j }{\sqrt{g_{ij} G^i G^j} \sqrt{g_{ij} H^i H^j}} = \cos \theta.
 \end{equation}
+
+Please note that if an index appears twice, both as subscript as well as a superscript, a summation over it is implied, see Ref. \cite{wiki_summation}.
 % ------------------------------------------------------------------------------------------------------------------------------------
 
 
@@ -125,29 +127,40 @@ The angle $\theta$ between two Bragg peaks $\left| G \right>$ and $\left| H \rig
 % ------------------------------------------------------------------------------------------------------------------------------------
 \section{Scattering triangle and TAS angles \label{sec:tasangles}}
 
-The derivation of basic scattering geometries in triple-axis spectrometers can be found in \cite[Ch. 1.3]{Shirane2002}.
+With the metric tensor of the crystal coordinate system, we can now calculate the scattering angles $2 \theta_M$, $2 \theta_S$, and $2 \theta_A$ from the monochromator, sample and analyser, respectively. The derivation of basic scattering geometries in triple-axis spectrometers can be found in \cite[Ch. 1.3]{Shirane2002}.
+
+For the monochromator and analyser, the crystal angles $\theta_M$ and $\theta_A$ are coupled to their scattering angles, they are simply half their value. 
+The crystal rotation for the sample is not necessarily half its scattering angle, $\Theta_S \ne 2\theta_S/2$, though, because the instrument can be freely positioned at any point of reciprocal crystal space.
+
+The monochromator and analyser scattering angles follow directly from Bragg's equation \cite[p. 68]{Gross2012} \cite[p. 13]{Shirane2002}:
+
+\begin{minipage}{0.45\textwidth}
+	\centering
+	\begin{equation} 2 d_{M}\sin \theta_{M} = n \lambda_{i}, \end{equation}
+	\begin{equation} 2 k_{i} \sin \theta_{M} = 2 \pi n / d_{M}, \end{equation}
+	\begin{equation} \boxed{ \theta_{M} = \arcsin \left( \frac{\pi n}{d_{M} \cdot k_{i}} \right). } \end{equation}
+\end{minipage}
+\begin{minipage}{0.45\textwidth}
+	\centering
+	\begin{equation} 2 d_{A}\sin \theta_{A} = n \lambda_{f}, \end{equation}
+	\begin{equation} 2 k_{f} \sin \theta_{A} = 2 \pi n / d_{A}, \end{equation}
+	\begin{equation} \boxed{ \theta_{A} = \arcsin \left( \frac{\pi n}{d_{A} \cdot k_{f}} \right). } \end{equation}
+\end{minipage}
+
+\vspace{0.5cm}
+
+To determine the sample scattering angle $2 \theta_S$, we use the scattering triangle, see Fig. \ref{fig:scattering_triangle}. 
+The scattering triangle can be directly determined by the angles the instrument is positioned at. 
+For that, we have a look at the incoming and final neutron wavevectors $\left| k_i \right>$ and $\left| k_f \right>$, whose directions (but not lengths!) correspond directly to the neutron paths before and after the sample, respectively, as shown on the left-hand side of Fig. \ref{fig:scattering_triangle}. We can rearrange them so that their tips meet, as depicted on the right-hand side of Fig. \ref{fig:scattering_triangle}, where the scattering triangle is formed together scattering vector $\left| Q \right> = \left| k_i \right> - \left| k_f \right>$. Here, the two wavevectors enclose the scattering angle $2 \theta_S$.
 
 \begin{figure}
-\begin{center}
-	\includegraphics[width = 0.75 \textwidth]{figures/tas_triangle}
-\end{center}
-\caption{Triple-axis layout (left) and scattering triangle (right).}
+	\begin{center}
+		\includegraphics[width = 0.75 \textwidth]{figures/tas_triangle}
+	\end{center}
+	\caption{Triple-axis layout (left) and scattering triangle (right). \label{fig:scattering_triangle}}
 \end{figure}
 
-
-\subsection*{Monochromator angles $a_1$, $a_2$ and analyser angles $a_5$, $a_6$}
-
-The monochromator (and analyser) angles follow directly from Bragg's equation:
-\begin{equation} 2 d_{m,a}\sin a_{1,5} = n \lambda_{i,f}, \end{equation}
-\begin{equation} 2 k_{i,f} \sin a_{1,5} = 2 \pi n / d_{m,a}, \end{equation}
-\begin{equation} \boxed{ a_{1,5} = \arcsin \left( \frac{\pi n}{d_{m,a} \cdot k_{i,f}} \right). } \end{equation}
-
-Fulfilling the Bragg condition, the angles $a_2$ and $a_6$ are simply: $a_{2,6} = 2 \cdot a_{1,5}.$
-
-
-
-\subsection*{Scattering angle $a_4$}
-
+We can calculate $2 \theta_S$ by forming the scalar product of $\left| Q \right>$ with itself.
 \begin{equation} 
 	\left| Q \right> = \left| k_i \right> - \left| k_f \right> \\ 
 \end{equation}
@@ -158,24 +171,30 @@ Fulfilling the Bragg condition, the angles $a_2$ and $a_6$ are simply: $a_{2,6} 
 	\left< Q | Q \right> = \left< k_i | k_i \right> + \left< k_f | k_f \right> - 2 \left< k_i | k_f \right> 
 \end{equation}
 \begin{equation} 
-	Q^2 = k_i^2 + k_f^2 - 2 k_i k_f \cos a_4 
+	Q^2 = k_i^2 + k_f^2 - 2 k_i k_f \cos \left( 2 \theta_S \right) 
 \end{equation}
 \begin{equation}
-	\boxed{ a_4 = \sigma_s \cdot \arccos \left( \frac{k_i^2 + k_f^2 - Q^2}{2 k_i k_f} \right) } 
+	\boxed{ 2 \theta_S = \sigma_s \cdot \arccos \left( \frac{k_i^2 + k_f^2 - Q^2}{2 k_i k_f} \right) } 
 \end{equation}
 
-The sign of $a_4$ is given by the sample scattering sense $\sigma_s = \pm 1$.
+As we could scatter in either clockwise or counterclockwise direction, $2 \theta_S$ can be positive or negative.
+The sign of $2 \theta_S$ is given by the sample scattering sense $\sigma_s = \pm 1$.
 
 
+\vspace{0.5cm}
 
 
-\subsection*{Rocking angle $a_3$}
+The final and most complicated angle to determine is the sample rotation $\Theta_S$.
+It is given by the angle of the incoming wavevector $\left| k_i \right>$ to an (arbitrary) direction $\left| a \right>$ which is known from sample orientation, this is usually a Bragg peak. 
+The situation is shown in the right panel of Fig. \ref{fig:scattering_triangle}.
+We split $\Theta_S$ into the angle $\psi$ between $\left| k_i \right>$ and $\left| Q \right>$ and the angle $\xi$ between $\left| k_i \right>$ and $\left| a \right>$:
+\begin{equation} \boxed{ \Theta_S = 180^{\circ} - \left( \psi + \xi \right) } \end{equation}
 
-\begin{equation} \boxed{ a_3 = 180^{\circ} - \left( \psi + \xi \right) } \end{equation}
+
+\vspace{0.5cm}
 
 
-\subsubsection*{Angle $\psi$}
-Angle $\psi$ between $\left| k_i \right>$ and $\left| Q \right>$, in units of \AA{}$^{-1}$, as before:
+The angle $\psi$ between $\left| k_i \right>$ and $\left| Q \right>$ is determined from the scattering triangle, as before:
 \begin{equation}
 	\left| k_f \right> = \left| k_i \right> - \left| Q \right> 
 \end{equation}
@@ -193,21 +212,26 @@ Angle $\psi$ between $\left| k_i \right>$ and $\left| Q \right>$, in units of \A
 \end{equation}
 
 
-\subsubsection*{Angle $\xi$}
-Angle $\xi$ between $\left| Q \right>$ and orientation vector $\left| a \right>$ (i.e. $ax$, $ay$, $az$), in units of rlu:
+\vspace{0.5cm}
+
+
+The angle $\xi$ between $\left| Q \right>$ and orientation vector $\left| a \right>$ is also determined from the properties of the scalar product.
+Here we have to use the covariant form, because $\left| a \right>$ is a coordinate in crystal space naming a Bragg reflection, while $\left| Q \right>$ lives, as before in instrument space.
 \begin{equation} 
 	\boxed{ \xi = 
 \sigma_{\mathrm{side}} \cdot \arccos \left( \frac{ \left< Q | a \right> }{ \sqrt{\left< Q | Q \right>} \sqrt{\left< a | a \right>} } \right) = 
 \sigma_{\mathrm{side}} \cdot \arccos \left( \frac{ Q^i g_{ij} a^j }{ \sqrt{Q^i g_{ij} Q^j} \sqrt{a^i g_{ij} a^j} } \right) } 
+\label{eq:xi}
 \end{equation}
 
-The sign, $\sigma_{\mathrm{side}}$, of $\xi$ depends on which side of the orientation vector $\left| a \right>$ 
-the scattering vector $\left| Q \right>$ is located. 
-The sign can be found by calculating the (covariant) cross product of $\left| a \right>$ and $\left| Q \right>$ 
-to give an out-of-plane vector $\left| x \right>$ which can be compared with the given scattering plane up vector. 
+The sign, $\sigma_{\mathrm{side}}$, of $\xi$ depends on which side of the orientation vector $\left| a \right>$ the scattering vector $\left| Q \right>$ is located. 
+The sign can be found by calculating the (covariant) cross product of $\left| a \right>$ and $\left| Q \right>$ to give an out-of-plane vector $\left| x \right>$ which can be compared with the given scattering plane up vector.
 The covariant cross-product is calculated as \cite[p. 815]{Arens2015}:
 \begin{equation}
-	x^l = g^{li} \epsilon_{ijk} a^j Q^k, \hspace{0.5cm} \mathrm{with} \ 
+	x^l = g^{li} \epsilon_{ijk} a^j Q^k,
+\end{equation}
+where $\epsilon_{ijk}$ is the general Levi-Civita symbol formed from the determinant of the basis vectors $\left| \underline{b}_i \right>$, see Ref. \cite[p. 815]{Arens2015}:
+\begin{equation}
 	\epsilon_{ijk} = \left|
 		\begin{array}{ccc} \left| 
 			\underline{b}_i \right> & \left| \underline{b}_j \right> & \left| \underline{b}_k \right>
@@ -215,9 +239,11 @@ The covariant cross-product is calculated as \cite[p. 815]{Arens2015}:
 \end{equation}
 
 
+
 \paragraph*{Special case}
-Special case for cubic crystals, $g_{ij} = \delta_{ij} \cdot \left( 2\pi / a \right)^2$:
+For cubic crystals with $\alpha = \beta = \gamma = 90^{\circ}$ and the lattice constants all equal, $a = b = c$, the metric tensor is diagonal, $g_{ij} = \delta_{ij} \cdot \left( 2\pi / a \right)^2$.
+With that, Eq. \ref{eq:xi} simplifies to:
 \begin{equation}
-	\xi = \sigma_{\mathrm{side}} \cdot \arccos \left( \frac{ Q_i a^i }{ \sqrt{Q_i Q^i} \sqrt{a_i a^i} } \right) 
+	\xi = \sigma_{\mathrm{side}} \cdot \arccos \left( \frac{ Q_i a^i }{ \sqrt{Q_i Q^i} \sqrt{a_i a^i} } \right).
 \end{equation}
 % ------------------------------------------------------------------------------------------------------------------------------------
