--- a/thesis.tex
+++ b/thesis.tex
@@ -22,6 +22,7 @@
 \usepackage[a4paper]{geometry}
 \geometry{tmargin=2.5cm, bmargin=2.5cm, lmargin=2cm, rmargin=2cm}
 
+\renewcommand{\arraystretch}{1.25}
 
 
 
