--- a/notation.tex
+++ b/notation.tex
@@ -11,10 +11,16 @@
 \hline
 \bf{Notation} & \bf{Explanation} \tabularnewline
 \hline
-$\left| x \right> \,=\, \left( x^i \right) $ & A contravariant vector \tabularnewline
+$ \underline{v} $ & A vector. \tabularnewline
 \hline
-$\left< x \right| \,=\, \left( x_i \right) $ & A covariant vector \tabularnewline
+$ M = \left( m_{ij} \right) $ & A matrix. \tabularnewline
 \hline
-$\left< x | y \right> \,=\, x_i y^i \,=\, g_{ij} x^i y^j $ & A scalar product \tabularnewline
+$\left| x \right> \,=\, \left( x^i \right) $ & A contravariant vector. \tabularnewline
+\hline
+$\left< x \right| \,=\, \left( x_i \right) $ & A covariant vector. \tabularnewline
+\hline
+$s \,=\, \left< x | y \right> \,=\, x_i y^i \,=\, g_{ij} x^i y^j $ & A scalar/inner product, the sums over $i$ and $j$ are implied \cite{wiki_summation}. \tabularnewline
+\hline
+$\left(a^{i}_{\;j}\right) \,=\, \left| x \right> \left< y \right| \,=\, x^i y_j$ & A tensor/outer product. \tabularnewline
 \hline
 \end{tabular}
