--- a/thesis.bib
+++ b/thesis.bib
@@ -201,7 +201,7 @@
 {
 	wiki_fractional,
 	author = {{Wikipedia contributors}},
-	title = {{Fractional coordinates -- {Wikipedia}{,} The Free Encyclopedia}},
+	title = {{Fractional coordinates --- {Wikipedia}{,} The Free Encyclopedia}},
 	year = "2020",
 	url = "\url{https://en.wikipedia.org/w/index.php?title=Fractional_coordinates&oldid=961675499}",
 	howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Fractional_coordinates&oldid=961675499}",
