--- a/thesis.tex
+++ b/thesis.tex
@@ -24,6 +24,10 @@
 
 \renewcommand{\arraystretch}{1.25}
 
+\makeatletter
+% Bold math tip from Prof. Icking and https://tex.stackexchange.com/questions/209466/problem-with-tocloft-minitoc-and-bold-math-mode
+\g@addto@macro\bfseries{\mathversion{bold}}
+\makeatother
 
 
 \begin{document}
