--- a/thesis.bib
+++ b/thesis.bib
@@ -100,6 +100,39 @@
 }
 
 
+@book
+{
+	Kernighan2006,
+	title={{The C Programming Language, Second Edition}},
+	author={Kernighan, Brian W and Ritchie, Dennis M},
+	year={1988},
+	publisher={Pearson},
+	isbn={978-0131103627},
+}
+
+
+@book
+{
+	Stroustrup2008,
+	title={{The C++ Programming Language, Fourth Edition}},
+	author={Bjarne Stroustrup},
+	year={2013},
+	publisher={Addision-Wesley Professional},
+	isbn={978-0321958327},
+}
+
+
+@book
+{
+	Stroustrup2018,
+	title={{A Tour of C++, Second Edition}},
+	author={Bjarne Stroustrup},
+	year={2018},
+	publisher={Addision-Wesley Professional},
+	isbn={978-0134997834},
+}
+
+
 @article
 {
 	Lumsden2005,
